--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,6 +31,25 @@ main{
     align-items: center;
 }
 
+.moreOption-div{
+    display: none;
+    width: 40vw;
+    height: 40vw;
+    padding: 25px;
+    top: 0;
+    margin-top: 10px;
+    text-align: center;
+    background-color: #555555;
+    position: absolute;
+    right: 0;
+    margin-right: 25px;
+}
+.moreOption-div p:hover{
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #9c9c9c;
+}
+
 /*Design para Desktop*/
 .info-publication{
     font-family: sans-serif;
