--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
 }
+img{
+    user-select: none;
+}
 /*Natalhia Fonseca */
 footer div {
     display: flex;
@@ -17,7 +20,7 @@ footer div {
 }
 /*Natalhia Fonseca */
 footer div img {
-    width: 8vw;
+    width: 10vw;
     height: fit-content;
 }
 
@@ -28,4 +31,3 @@ footer div img {
     height: fit-content;
 }
 }
-
