--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,44 +1,188 @@
+:root {
+  --corpadrao: #0072c6;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  
+}
+body{
+  font-family: sans-serif;
+  color: var(--corpadrao);
+}
+.principal{
+  padding: 25px;
+  padding-right: 0;
+  width: 100vw;
+  height: fit-content;
+  padding-left: 12.5vw;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.3);
+}
+input[type="checkbox"] {
+  
+  width: 20px;
+  height: 20px;
+  position: relative;
+}
+h2{
+  font-size: 18px;
+  padding: 0px 0px;
+}
+.opcoes {
+  width: 100%;
+  display: flex;
+}
+
+.especie {
+  border-left: 3px solid var(--corpadrao);
+  padding-left: 1rem;
+  margin-right: 20px;
+  font-size: 3.5vw;
+}
+.porte{
+  font-size: 3.5vw;
+}
+.idade{
+  margin-left: 50px;
+  font-size: 3.5vw;
+}
+
+.icon {
+  width: 20px;
+}
+
+.icon-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
  img {
     width: 15px;
     height: 15px;
 
  }
+ main{
+  padding-bottom: 10vh;
+ }
 
- header{
+ header button {
    color: #0072c6;
    display: flex;
    flex-direction: column;
    align-items: center;
+   height: 10%;
+   padding: 10px 30px;
+   right: 20px;
+   background-color: #0072c6;  
  }
 
- .input-container {
-    border: 1px solid #0072c6;
-    display: inline-block;
-    border-radius: 5px;
-    padding: 4px 10px;
-    cursor: pointer;
-    margin-top: 2rem;
-    outline: 0;
-    width: 70vw;
-    height: 20px;
-    margin-bottom: 10px;
- }
-
- .input-container input{
-   border: none;
-   outline: none;
-   height: 100%;
-   width: 90%;
- }
  .checkbox-container{
-   width: calc(70vw + 14px);
+   font-family: sans-serif;
    display: flex;
-   gap: 5px;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+   padding: 30px;
  }
 
  .checkbox-container label{
    font-size: 0.6rem;
    font-weight: bold;
-   font-family: Arial, sans-serif;
+   color: #0072c6;
+   gap: 1px;
+  
  }
 
+ .btn{
+   border: none;
+   background-color: #0072c6;
+   color: #fff;
+   width: 15vw;
+   height: 3vh;
+   font-size: 10%;
+   font-weight: bold;
+   
+ }
+
+/*Design Responsivo*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  }
+
+/* Estilos para o container */
+@media screen and (max-width: 768px ) {
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px;
+  }
+}
+/* Estilos para os cards */
+.card {
+  position: relative;
+  width: 300px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.card img {
+  width: 300px;
+  height: 300px;
+  vertical-align: middle;
+  transition: transform 0.3s ease;
+}
+
+.card:hover img {
+  transform: scale(1.05);
+}
+
+/* Estilos para a sobreposição (overlay) */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.card:hover .overlay {
+  opacity: 1;
+}
+
+.overlay p {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.overlay button {
+  padding: 10px 20px;
+  background-color: #0072c6;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.overlay button:hover {
+  background-color: #0072c6;
+}
