--- a/static/css/main.css
+++ b/static/css/main.css
@@ -87,7 +87,7 @@ main{
     padding: 2vw;
     border-radius: 5px;
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: 1.2vw;
     font-weight: bold;
     color: #fff;
     width: 10vw;
