--- a/static/css/search.css
+++ b/static/css/search.css
@@ -41,14 +41,29 @@ h2{
   border-left: 3px solid var(--corpadrao);
   padding-left: 1rem;
   margin-right: 20px;
-  font-size: 3.5vw;
+  font-size: 2vw;
 }
 .porte{
-  font-size: 3.5vw;
+  font-size: 2vw;
 }
 .idade{
   margin-left: 50px;
-  font-size: 3.5vw;
+  font-size: 2vw;
+}
+@media (max-width: 768px ) {
+  .especie {
+    border-left: 3px solid var(--corpadrao);
+    padding-left: 1rem;
+    margin-right: 20px;
+    font-size: 3.5vw;
+  }
+  .porte{
+    font-size: 3.5vw;
+  }
+  .idade{
+    margin-left: 50px;
+    font-size: 3.5vw;
+  }
 }
 
 .icon {
@@ -66,6 +81,10 @@ h2{
 
  }
  main{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
   padding-bottom: 10vh;
  }
 
@@ -116,15 +135,15 @@ h2{
   }
 
 /* Estilos para o container */
-@media screen and (max-width: 768px ) {
 .container {
+  height: fit-content;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   padding: 20px;
+  padding-bottom: 15vh;
   }
-}
 /* Estilos para os cards */
 .card {
   position: relative;
